fix: #10 - 테스트 변경